--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <!-- PASO 2: EL CÓDICE PERSONAL (Resultados) -->
         <section id="results" class="hidden opacity-0 transition-opacity duration-1000 space-y-12">
             <div class="pt-8">
-                 <h2 class="main-title text-4xl md:text-5xl font-bold text-center mb-12 text-white">Tu Códice Personal, <span id="user-name-title" class="text-cyan-400"></span></h2>
-                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+                 <h2 class="main-title text-4xl sm:text-5xl font-bold text-center mb-12 text-white">Tu Códice Personal, <span id="user-name-title" class="text-cyan-400"></span></h2>
+                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
                     <div id="camino-vida-card" class="glassmorphism rounded-2xl h-56"></div>
                     <div id="alma-card" class="glassmorphism rounded-2xl h-56"></div>
                     <div id="personalidad-card" class="glassmorphism rounded-2xl h-56"></div>
@@ -139,7 +139,7 @@
             
             <!-- SECCIÓN CALCULADORA DE SINERGIA -->
             <div id="sinergia-section">
-                <h2 class="main-title text-4xl md:text-5xl font-bold text-center mb-8 text-white">Sinergia Cósmica</h2>
+                <h2 class="main-title text-4xl sm:text-5xl font-bold text-center mb-8 text-white">Sinergia Cósmica</h2>
                 <div class="glassmorphism p-6 rounded-2xl max-w-2xl mx-auto">
                     <p class="text-center mb-4">Descubre tu compatibilidad numerológica con otra persona.</p>
                     <form id="sinergia-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -154,14 +154,14 @@
 
             <!-- Sección del Calendario -->
             <div>
-                <h2 class="main-title text-4xl md:text-5xl font-bold text-center mb-8 text-white">Calendario Cósmico</h2>
+                <h2 class="main-title text-4xl sm:text-5xl font-bold text-center mb-8 text-white">Calendario Cósmico</h2>
                 <div class="glassmorphism p-4 sm:p-6 rounded-2xl">
                     <div class="flex items-center justify-between mb-4">
                         <button id="prev-month" class="p-2 rounded-full hover:bg-white/10 transition">&lt;</button>
                         <h3 id="month-year" class="text-2xl font-bold text-white"></h3>
                         <button id="next-month" class="p-2 rounded-full hover:bg-white/10 transition">&gt;</button>
                     </div>
-                    <div id="calendar-grid" class="grid grid-cols-7 gap-2"></div>
+                    <div id="calendar-grid" class="grid grid-cols-7 gap-1 sm:gap-2"></div>
                 </div>
             </div>
         </section>
@@ -385,7 +385,7 @@
             const calendarGrid = document.getElementById('calendar-grid');
             calendarGrid.innerHTML = '';
             const diasSemana = ['Dom', 'Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb'];
-            diasSemana.forEach(dia => { calendarGrid.innerHTML += `<div class="text-center font-bold text-cyan-300">${dia}</div>`; });
+            diasSemana.forEach(dia => { calendarGrid.innerHTML += `<div class="text-center font-bold text-cyan-300 text-xs sm:text-base">${dia}</div>`; });
             const firstDayOfMonth = new Date(year, month, 1).getDay();
             const daysInMonth = new Date(year, month + 1, 0).getDate();
             for (let i = 0; i < firstDayOfMonth; i++) { calendarGrid.innerHTML += `<div></div>`; }
@@ -399,7 +399,7 @@
                 const mesPersonal = reducirNumero(anoPersonal + (month + 1));
                 const diaPersonal = reducirNumero(mesPersonal + i);
                 const diaInfo = infoNumeros.diaPersonal[diaPersonal];
-                let dayClasses = `calendar-day glassmorphism p-2 rounded-lg text-center cursor-pointer flex flex-col items-center justify-center aspect-square`;
+                let dayClasses = `calendar-day glassmorphism rounded-lg text-center cursor-pointer flex flex-col items-center justify-center aspect-square p-1`;
                 if (new Date().toDateString() === currentDayDate.toDateString()) dayClasses += ' day-pulse';
                 const moonPhase = getMoonPhase(currentDayDate);
                 const isRetrograde = isMercurioRetrogrado(currentDayDate);
@@ -407,7 +407,7 @@
                 dayElement.className = dayClasses;
                 dayElement.style.background = `linear-gradient(45deg, ${diaInfo.grad.split(' ')[0].replace('from-', 'var(--tw-gradient-from, #000)')}, ${diaInfo.grad.split(' ')[1].replace('to-', 'var(--tw-gradient-to, #000)')})`;
                 
-                dayElement.innerHTML = `<span class="text-2xl font-bold" style="color: ${diaPersonal > 9 ? 'black' : 'white'}; text-shadow: 0 0 5px black;">${i}</span><span class="text-sm font-bold" style="color: ${diaPersonal > 9 ? 'black' : 'white'}; text-shadow: 0 0 5px black;">${diaPersonal}</span><div class="flex text-xs mt-1 gap-1 items-center"><span>${moonPhase.icon}</span>${isRetrograde ? '<span>⏪</span>' : ''}${isFavorable ? '<span class="text-yellow-300">⭐</span>' : ''}</div>`;
+                dayElement.innerHTML = `<span class="text-lg sm:text-2xl font-bold" style="color: ${diaPersonal > 9 ? 'black' : 'white'}; text-shadow: 0 0 5px black;">${i}</span><span class="text-xs sm:text-sm font-bold" style="color: ${diaPersonal > 9 ? 'black' : 'white'}; text-shadow: 0 0 5px black;">${diaPersonal}</span><div class="flex text-xs mt-1 gap-1 items-center"><span>${moonPhase.icon}</span>${isRetrograde ? '<span>⏪</span>' : ''}${isFavorable ? '<span class="text-yellow-300">⭐</span>' : ''}</div>`;
                 dayElement.onclick = () => showDayDetails(currentDayDate, diaPersonal, diaInfo, moonPhase, isRetrograde);
                 calendarGrid.appendChild(dayElement);
             }
