--- a/Lindex.html
+++ b/Lindex.html
@@ -204,7 +204,7 @@
                             <li>✓ Reporte PDF (1 mes)</li>
                             <li>✓ Análisis de Sinergia</li>
                         </ul>
-                        <a href="https://wa.me/527226161301?text=Hola%2C%20estoy%20interesado%20en%20el%20Plan%20Explorador%20de%201%20Mes." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-600 text-white font-semibold hover:bg-cyan-500 transition-colors">Comenzar Ahora</a>
+                        <a href="https://wa.me/527226161301?text=Hola%2C%20ingrese%20a%20la%20p%C3%A1gina%20de%20numerolog%C3%ADa%20%22Sendero%2011%22%20y%20tengo%20inter%C3%A9s%20en%20el%20Plan%20Explorador." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-600 text-white font-semibold hover:bg-cyan-500 transition-colors">Comenzar Ahora</a>
                     </div>
                     <!-- Plan 3 Meses -->
                     <div class="interactive-card pricing-card rounded-2xl p-8 flex flex-col" data-aos="fade-up" data-aos-delay="100">
@@ -217,7 +217,7 @@
                             <li>✓ Reporte PDF (hasta 3 meses)</li>
                             <li>✓ Análisis de Sinergia</li>
                         </ul>
-                        <a href="https://wa.me/527226161301?text=Hola%2C%20estoy%20interesado%20en%20el%20Plan%20Iniciado%20de%203%20Meses." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-600 text-white font-semibold hover:bg-cyan-500 transition-colors">Elegir Plan</a>
+                        <a href="https://wa.me/527226161301?text=Hola%2C%20ingrese%20a%20la%20p%C3%A1gina%20de%20numerolog%C3%ADa%20%22Sendero%2011%22%20y%20tengo%20inter%C3%A9s%20en%20el%20Plan%20Iniciado." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-600 text-white font-semibold hover:bg-cyan-500 transition-colors">Elegir Plan</a>
                     </div>
                     <!-- Plan 6 Meses (Destacado) -->
                     <div class="interactive-card pricing-card rounded-2xl p-8 relative flex flex-col highlighted-card" data-aos="fade-up" data-aos-delay="200">
@@ -233,7 +233,7 @@
                             <li>✓ Reporte PDF (hasta 6 meses)</li>
                             <li>✓ Análisis de Sinergia</li>
                         </ul>
-                        <a href="https://wa.me/527226161301?text=Hola%2C%20estoy%20interesado%20en%20el%20Plan%20Viajero%20de%206%20Meses." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-500 text-white font-semibold hover:bg-cyan-400 transition-colors glow-button">Elegir este Plan</a>
+                        <a href="https://wa.me/527226161301?text=Hola%2C%20ingrese%20a%20la%20p%C3%A1gina%20de%20numerolog%C3%ADa%20%22Sendero%2011%22%20y%20tengo%20inter%C3%A9s%20en%20el%20Plan%20Viajero." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-500 text-white font-semibold hover:bg-cyan-400 transition-colors glow-button">Elegir este Plan</a>
                     </div>
                     <!-- Plan 12 Meses -->
                     <div class="interactive-card pricing-card rounded-2xl p-8 flex flex-col" data-aos="fade-up" data-aos-delay="300">
@@ -246,7 +246,7 @@
                             <li>✓ Reporte PDF (hasta 12 meses)</li>
                             <li>✓ Análisis de Sinergia</li>
                         </ul>
-                        <a href="https://wa.me/527226161301?text=Hola%2C%20estoy%20interesado%20en%20el%20Plan%20Maestro%20de%201%20A%C3%B1o." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-600 text-white font-semibold hover:bg-cyan-500 transition-colors">Obtener Acceso Anual</a>
+                        <a href="https://wa.me/527226161301?text=Hola%2C%20ingrese%20a%20la%20p%C3%A1gina%20de%20numerolog%C3%ADa%20%22Sendero%2011%22%20y%20tengo%20inter%C3%A9s%20en%20el%20Plan%20Maestro." target="_blank" class="mt-8 block w-full py-3 px-6 text-center rounded-lg bg-cyan-600 text-white font-semibold hover:bg-cyan-500 transition-colors">Obtener Acceso Anual</a>
                     </div>
                 </div>
             </div>
